--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -28,8 +28,25 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- nav bar starts -->
+
+    <!-- Image and text -->
+    <div class="row">
+      
+<nav class="navbar navbar-light bg-info">
+  <div class="col">
+  <a class="navbar-brand" href="#">
+    <img src="https://yt3.googleusercontent.com/j7ZgnPtDYj57yf4bq2Iqe4FoByxshJwNPfCnVP2As1GIfw7obncQyqBBVmfUnaYGNVJTE4fOkA=s900-c-k-c0x00ffffff-no-rj" width="150" height="150" class="d-inline-block align-top" alt="">
+  </div>
+  <!-- <div class="col"> -->
+    <h1 class="display-1 text-left"> Welcome to our Lyrics server</h1>
+    <!-- </div> -->
+  </a>
+</nav>
+</div>
+<!-- nav bar ends -->
     <div class="container">
-    <h1 class="display-1"> Welcome to our Lyrics server</h1>
+    
     <div id="root"></div>
     <!--
       This HTML file is a template.
