--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -34,18 +34,19 @@
     <div class="row">
       
 <nav class="navbar navbar-light bg-info">
-  <div class="col">
-  <a class="navbar-brand" href="#">
+  <div class="col" style="width: 10cm;">
+  
     <img src="https://yt3.googleusercontent.com/j7ZgnPtDYj57yf4bq2Iqe4FoByxshJwNPfCnVP2As1GIfw7obncQyqBBVmfUnaYGNVJTE4fOkA=s900-c-k-c0x00ffffff-no-rj" width="150" height="150" class="d-inline-block align-top" alt="">
   </div>
-  <!-- <div class="col"> -->
-    <h1 class="display-1 text-left"> Welcome to our Lyrics server</h1>
-    <!-- </div> -->
+  <div class="col" >
+    <a class="navbar-brand" href="#"></a>
+    <h1 class="my-6" style="text-align: center;"> Welcome to our Lyrics server</h1>
+    </div>
   </a>
 </nav>
 </div>
 <!-- nav bar ends -->
-    <div class="container">
+    <div class="container-fluid">
     
     <div id="root"></div>
     <!--
