--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -60,5 +60,21 @@
       To create a production bundle, use `npm run build` or `yarn build`.
       -->
         </div>
+        <!-- Remove the container if you want to extend the Footer to full width. -->
+<div >
+  <!-- footer starts -->
+  <footer class="text-center text-lg-start bg-info fixed-bottom" >
+    
+
+    <!-- Copyright -->
+    <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2023 Copyright:
+      <a class="text-white" href="https://www.songlyrics.com">songlyrics.com</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  
+</div>
+<!-- End of .container -->
   </body>
 </html>
