Edited the heading

--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -34,13 +34,13 @@
     <div class="row">
       
 <nav class="navbar navbar-light bg-info">
-  <div class="col" style="width: 10cm;">
+  <div class="col-sm-2" style="width: 10cm;">
   
     <img src="https://yt3.googleusercontent.com/j7ZgnPtDYj57yf4bq2Iqe4FoByxshJwNPfCnVP2As1GIfw7obncQyqBBVmfUnaYGNVJTE4fOkA=s900-c-k-c0x00ffffff-no-rj" width="150" height="150" class="d-inline-block align-top" alt="">
   </div>
-  <div class="col" >
-    <a class="navbar-brand" href="#"></a>
-    <h1 class="my-6" style="text-align: center;"> Welcome to our Lyrics server</h1>
+  <div class="col-sm-8" >
+    <a class="navbar-brand" href="#">
+    <h1 class="my-6 display-1" style="margin-left: -10px; font-weight: 20px; font-size: 50px;"> Welcome to our Lyrics server</h1>
     </div>
   </a>
 </nav>
